# GalTransTools

./: README.md
trans_api/: chatgpt.py
trans_matcher/: CMakeLists.txt  main.cpp
trans_matcher/core/: IPC.cpp  IPC.h
trans_matcher/test/: CMakeLists.txt  test.cpp
trans_matcher/widgets/: TransMatcher.cpp  TransMatcher.h
